core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/flatten2.yf
---
name: contains
graphs:
  start:
    - {type: EchoNode, put: list, value: []}
    - {type: EchoNode, put: list2, value: ["no"]}
    - type: FlattenListNode
      flatten: ["{list}", "{list2}", "{list2}", [1,2]]
      output: "mergedlists"


